# monte-carlo-tracer

data/: scene-mirror-with-light - Kopie (2).mtl  scene-mirror-with-light - Kopie.mtl  scene-mirror-with-light.mtl  scene-with-light.3ds  scene-with-light.blend  scene-with-light.blend1  scene-with-light.mtl  scene-with-light.ply  scene-with-light2.mtl  scene.mtl  test2.mtl
shader/: frag.glsl  vert.glsl
src/: CMakeLists.txt  revert.txt
src/app/: CMakeLists.txt
src/app/src/: .#MonteCarloPathtracer.cpp  .#app.cpp  ArcBall.cpp  ArcBall.h  Camera.cpp  Camera.h  MonteCarloPathtracer.cpp  MonteCarloPathtracer.h  Scene.cpp  Scene.h  app.cpp
src/app/src/geometry/: .#Intersection.cpp  Intersection.cpp  Intersection.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  geometry.h
src/app/src/shader/: LoadShader.cpp  LoadShader.h
src/app/src/util/: .#Mesh.cpp  AreaLight.cpp  AreaLight.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h  Shape.h  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h
src/cmake/modules/: CMakeLists.txt
